# Homework30

./: .gitignore  pyproject.toml
ads/: admin.py  apps.py  models.py  permissions.py  serializers.py
ads/migrations/: 0001_initial.py
ads/views/: ads.py  category.py  locations.py  selection.py  service.py  users.py
djangoProject/: settings.py  urls.py
