[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["Айрат <airat.nevretdinov@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
djangorestframework = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
